# wave_prop_package

./: 2d_wave_propagation.pptx  README.md  environment.yml  pyproject.toml  v0_wavelength_decompostion.ipynb  wave_prop_module.py
examples/: v1_propagation_angular_spectrum.ipynb  v1_propagation_angular_spectrum_torch.ipynb  v2_propagation_angled_plane.ipynb  v3_tilt_real_object.ipynb
py_wave_propagator/: __init__.py  free_space_prop.py  torch_volume_prop.py  volume_prop.py
src/py_wave_propagator/: free_space_prop.py  volume_prop.py
