[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_wave_propagator"
version = "0.1.0"
description = "Complex wavefield propagtion to parallel and oblique planes."
authors = [
  { name="Syed Kazim", email="kazimsyed4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
 "numpy>=1.24",
 "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
